Bug 256322 - rekonq does not show anything from the history in the url bar
Summary: rekonq does not show anything from the history in the url bar
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.6.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 0.9
Assignee: Andrea Diamantini
URL:
Keywords:
: 274757 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-07 19:06 UTC by Jan Hofmann
Modified: 2011-12-20 22:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Hofmann 2010-11-07 19:06:13 UTC
Version:           0.6.1 (using KDE 4.5.2) 
OS:                Linux

I checked it with both versions, git and 0.6.1:

If I start typing something into the url bar which IS in the browser history, the url bar does not show it.
All other things are working fine in the url bar, like bookmarks and google suggestions.

I checked it with an other fresh test-user, but i got the same problem. On my Laptop, which runs kubuntu 10.10 the history is working inside the url bar. So it seems to be some gentoo specific problem perhabs?

What ca I provide to resolve the problem? Which logfiles or traces?

Without history-search inside the url bar, rekonq is pretty useless for me :(

Reproducible: Always

Steps to Reproduce:
Visit a site, close the browser, re-open it and type the just visited site into the url bar.

Actual Results:  
The url bar doe not complete your typing and doesn't show you anything from the history.

Expected Results:  
The url bar shout give me some suggestions from my browser-history and/or should autocompete my typing.
Comment 1 Andrea Diamantini 2010-11-07 22:38:35 UTC
On Sunday 07 November 2010 19:06:14 Jan Hofmann wrote:
> https://bugs.kde.org/show_bug.cgi?id=256322
> 
>            Summary: rekonq does not show anything from the history in the
>                     url bar
>            Product: rekonq
>            Version: 0.6.1
>           Platform: Gentoo Packages
>         OS/Version: Linux
>             Status: NEW
>           Severity: normal
>           Priority: NOR
>          Component: general
>         AssignedTo: adjam7@gmail.com
>         ReportedBy: elusive@virtualpixel.de
> 
> 
> Version:           0.6.1 (using KDE 4.5.2)
> OS:                Linux
> 
> I checked it with both versions, git and 0.6.1:
> 
> If I start typing something into the url bar which IS in the browser
> history, the url bar does not show it.
> All other things are working fine in the url bar, like bookmarks and google
> suggestions.
> 
> I checked it with an other fresh test-user, but i got the same problem. On
> my Laptop, which runs kubuntu 10.10 the history is working inside the url
> bar. So it seems to be some gentoo specific problem perhabs?
> 
> What ca I provide to resolve the problem? Which logfiles or traces?
> 
> Without history-search inside the url bar, rekonq is pretty useless for me
> :(
> 
> Reproducible: Always
> 
> Steps to Reproduce:
> Visit a site, close the browser, re-open it and type the just visited site
> into the url bar.
> 
> Actual Results:
> The url bar doe not complete your typing and doesn't show you anything from
> the history.
> 
> Expected Results:
> The url bar shout give me some suggestions from my browser-history and/or
> should autocompete my typing.

Uhm.. try checking first your "web-shortcuts" setting. Compare (gentoo vs 
kubuntu) the default search engine setting.
Comment 2 Jan Hofmann 2010-11-08 07:40:05 UTC
(In reply to comment #1)
> Uhm.. try checking first your "web-shortcuts" setting. Compare (gentoo vs 
> kubuntu) the default search engine setting.

Well, that does the trick, thx! On my Gentoo installation, the default search provider was "none". I switched it to google et voila, history serch is working!

But that seems to be a bug too :) Google search was working great, although the search provider was none. And why is the history search depending on google (or whatever searchprovider you choose?
Comment 3 Andrea Diamantini 2010-11-08 10:13:21 UTC
On Monday 08 November 2010 07:40:07 Jan Hofmann wrote:
> https://bugs.kde.org/show_bug.cgi?id=256322
> 
> 
> 
> 
> 
> --- Comment #2 from Jan Hofmann <elusive virtualpixel de>  2010-11-08
> 07:40:05 --- (In reply to comment #1)
> 
> > Uhm.. try checking first your "web-shortcuts" setting. Compare (gentoo vs
> > kubuntu) the default search engine setting.
> 
> Well, that does the trick, thx! On my Gentoo installation, the default
> search provider was "none". I switched it to google et voila, history
> serch is working!
> 
> But that seems to be a bug too :) Google search was working great, although
> the search provider was none. And why is the history search depending on
> google (or whatever searchprovider you choose?

Uhm.. yes (it seems a bug)! In fact I was waiting your reply to take a look at 
the code ;)

Regards,
Comment 4 Thorsten Mühlfelder 2011-03-02 23:46:17 UTC
Had the same problem here and it could be resolved by setting a default search. This should be fixed ;)
Comment 5 nib952051 2011-04-22 09:37:58 UTC
hi, I faced with that problem yesterday, hope patch could help

diff --git a/src/urlbar/urlresolver.cpp b/src/urlbar/urlresolver.cpp
index d89f27d..ffadd7e 100644
--- a/src/urlbar/urlresolver.cpp
+++ b/src/urlbar/urlresolver.cpp
@@ -112,6 +112,11 @@ UrlResolver::UrlResolver(const QString &typedUrl)
             else
                 reg = reg + "|(" + engineUrl + ')';
         }
+        if(reg.isEmpty()) {
+            qDebug() << "Default search engine is not selected";
+            reg = "(http://www\\.google\\.com/search\\?q=[\\d\\w-.]+&ie=UTF-8&oe=UTF-8)";
+            // cutted from reg, but it is wrong my search query looks like google.ru/search?hl=ru&q=..
+        }
         _searchEnginesRegexp = QRegExp(reg);
     }
 }
Comment 6 Gabriele Menna 2011-12-14 11:07:20 UTC
Still reproducible on 0.8.1, here.

Changing default search engine didn't help.
Comment 7 Andrea Diamantini 2011-12-14 23:29:06 UTC
Sorry, I really cannot reproduce your bug with any settings tried (no default search engine, google search engine, amazon search engine, etc...).
History entries (when available) are always shown here.
Comment 8 Gabriele Menna 2011-12-15 12:06:48 UTC
searchengine.cpp, line 61: the call to cg.readEntry() fails, returning a string list containing "cannot access memory at address 0xd", one character per string.

This way, Favourites list remains empty, QString reg, declared at urlresolver.cpp:105 isn't properly filled, _searchEnginesRegexp will be constructed as a QRegExp on an empty string, the call to _searchEnginesRegexp.indexIn(), urlresolver.cpp:343 never returns -1, every history entry is cut away.
Comment 9 Gabriele Menna 2011-12-15 12:40:20 UTC
I'd replace ulresolver.cpp:344 with
if (_searchEnginesRegexp.isEmpty() || _searchEnginesRegexp.indexIn(i.url) == -1)
Comment 10 Andrea Diamantini 2011-12-15 16:09:39 UTC
Git commit 0791fdb4347b59e486a3be2e4a0514ac661e76dd by Andrea Diamantini.
Committed on 15/12/2011 at 17:09.
Pushed by adjam into branch 'master'.

show history entries also when no favorite search engine is set

Bug investigation and courtesy patch by Gabo Menna.
Many thanks for :D

BUG: 256322

M  +1    -1    src/urlbar/urlresolver.cpp

http://commits.kde.org/rekonq/0791fdb4347b59e486a3be2e4a0514ac661e76dd
Comment 11 Andrea Diamantini 2011-12-15 16:10:35 UTC
Git commit b34b4af8ec0b7f4508bfdecc1018aa02b905ac4a by Andrea Diamantini.
Committed on 15/12/2011 at 17:09.
Pushed by adjam into branch 'Branches.0.8'.

show history entries also when no favorite search engine is set

Bug investigation and courtesy patch by Gabo Menna.
Many thanks for :D

BUG: 256322

M  +1    -1    src/urlbar/urlresolver.cpp

http://commits.kde.org/rekonq/b34b4af8ec0b7f4508bfdecc1018aa02b905ac4a
Comment 12 Johannes Obermayr 2011-12-20 22:39:45 UTC
*** Bug 274757 has been marked as a duplicate of this bug. ***