show history entries also when no favorite search engine is set

Bug investigation and courtesy patch by Gabo Menna.
Many thanks for :D

BUG: 256322